Fix button width on mobile devices

--- a/hsreplaynet/static/styles/home.scss
+++ b/hsreplaynet/static/styles/home.scss
@@ -144,7 +144,7 @@ ul.home-steps > li {
 
 	.promo-button, .promo-button-outline {
 		margin-top: 10px;
-		width: 80%;
+		width: 100%;
 	}
 }
 
